Addressing review
Signed-off-by: Peter Zaoral <pzaoral@redhat.com>