@@ -1,5 +1,6 @@
 package org.keycloak.services.client.query;
 
+import java.util.List;
 import java.util.stream.Collectors;
 
 import org.antlr.v4.runtime.CharStream;
@@ -14,8 +15,33 @@ public class QueryParseUtils {
                 .collect(Collectors.joining("."));
     }
 
+    public static void validate(ClientQueryParser.QueryContext queryCtx) {
+        for (var expr : queryCtx.expression()) {
+            String fieldPath = extractFieldPath(expr);
+            if (!FieldResolver.isKnownField(fieldPath)) {
+                throw new ClientQueryException("Unknown query field: " + fieldPath);
+            }
+
+            if (expr.value() instanceof ClientQueryParser.ListValueContext listValue) {
+                validateListConsistency(listValue.list());
+            }
+        }
+    }
+
+    private static void validateListConsistency(ClientQueryParser.ListContext listCtx) {
+        List<String> entries = listCtx.listEntry().stream()
+                .map(e -> e.LIST_ENTRY().getText())
+                .toList();
+
+        boolean allHaveColon = entries.stream().allMatch(e -> e.contains(":"));
+        boolean noneHaveColon = entries.stream().noneMatch(e -> e.contains(":"));
+        if (!allHaveColon && !noneHaveColon) {
+            throw new ClientQueryException("Cannot mix list items and map entries in a single list expression");
+        }
+    }
+
     public static ClientQueryParser.QueryContext parse(String query) {
-        if (query == null || query.trim().isEmpty()) {
+        if (query == null || query.isBlank()) {
             throw new ClientQueryException("Query expression cannot be null or empty");
         }
 
